# Localbrain

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md
docs/spec/: README.md  architecture.md  embedding-runtime.md  ui-review.md
src/localbrain/: __init__.py  config.py  context.py
src/localbrain/adapters/: __init__.py  cli.py  mcp_server.py
src/localbrain/adapters/web/: __init__.py  server.py
src/localbrain/adapters/web/static/: index.html
src/localbrain/core/: __init__.py  chunking.py  clustering.py  db.py  file_index.py  indexer.py  insights.py  models.py  scanner.py  search.py  source_store.py  store.py
src/localbrain/core/embed/: __init__.py  base.py  fastembed_provider.py  ollama_provider.py  registry.py  st_provider.py
src/localbrain/core/loaders/: __init__.py  base.py  registry.py  text_loader.py
src/localbrain/core/rerank/: __init__.py  base.py  cross_encoder.py  registry.py
src/localbrain/services/: __init__.py  indexing_service.py  insights_service.py  model_service.py  search_service.py
tests/: test_clustering.py
